--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -93,7 +93,7 @@ permalink: "/services/"
                 </p>
             </li>
         </ul>
-                <a href="" class="cs-button-solid">Book Appointment</a>
+                <a href="/contact/" class="cs-button-solid">Book Appointment</a>
 
     </div>
     
@@ -116,7 +116,7 @@ permalink: "/services/"
 <!--Placed in a wrapper div so we can position the car absolutely inside the container to be centered in the middle of the list on desktop-->
 <div class="cs-wrapper">
     <!--Car-->
-    <picture class="cs-image">
+    <picture class="cs-image cs-hide-on-mobile">
         <!--Mobile Image-->
         <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/nice-car.png">
         <!--Tablet and above Image-->
