--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,7 @@ tags: "sitemap" # content/content.json will make sure that all pages in content/
         </li>
     </ul>
 </div>
- <a href="/contact/" class="cs-button-solid">Book Appointment</a>
+ <a href="/contact/" class="cs-button-solid">Schedule An Appointment</a>
     </div>
 </section>
 
