--- a/src/index.html
+++ b/src/index.html
@@ -376,7 +376,7 @@ tags: "sitemap" # content/content.json will make sure that all pages in content/
                 </div>
             </li>
         </ul>
-        <a href="/reviews/" class="cs-button-solid">Read All Reviews</a>
+        <a href="/reviews/" class="cs-button-solid" style="margin-top: 3rem;">Read All Reviews</a>
     </div>
 </section>
 
